added title and changed background image location

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
   <html>
     <head>
+     <title>Justus</title>
       <!--Import materialize.css-->
       <link type="text/css" rel="stylesheet" href="materialize.min.css"  media="screen,projection"/>
       <link type="text/css" rel="stylesheet" href="justus.css"  media="screen,projection"/>
