--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
       </ul>
     </div>
   </nav>
+
+    <div id="typed"></div>
         <!-- Page Content goes here -->
   </div>
 
@@ -53,5 +55,6 @@
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
       <script type="text/javascript" src="materialize.min.js"></script>
        <script type="text/javascript" src="justus.js"></script>
+       <script src="typed.js" type="text/javascript"></script>
     </body>
   </html>
