changed box border sisize

--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
     </div>
   </nav>
 
-    <div id="typed"></div>
+    <div></div>
+     <p id="typed1"></p>
+     <p id="typed2"></p>
+     <p id="typed"></p>
         <!-- Page Content goes here -->
   </div>
 
