added some iframe

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   
     <div class="logo">
        <h3>JUSTUS</h3>
+       <h5> Software engineer</h5>
     </div>
  
           
@@ -31,27 +32,27 @@
 
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="sass.html">Bio</a></li>
-        <li><a href="badges.html">Work</a></li>
-        <li><a href="collapsible.html">Portfolio</a></li>
-         <li><a href="collapsible.html">Life</a></li>
-        <li><a href="mobile.html">Contacts</a></li>
+          <li><a href="index.html" target="iframe_a">Bio</a></li>
+          <li><a href="index.html" target="iframe_a">Work</a></li>
+          <li><a href="index.html" target="iframe_a">Portfolio</a></li>
+          <li><a href="index.html" target="iframe_a">Life</a></li>
+          <li><a href="index.html" target="iframe_a">Contacts</a></li>
       </ul>
       <ul class="side-nav" id="mobile-demo">
-        <li><a href="sass.html">Bio</a></li>
-        <li><a href="badges.html">Work</a></li>
-        <li><a href="collapsible.html">Portfolio</a></li>
-        <li><a href="collapsible.html">Life</a></li>
-        <li><a href="mobile.html">Contacts</a></li>
+          <li><a href="index.html" target="iframe_a">Bio</a></li>
+          <li><a href="index.html" target="iframe_a">Work</a></li>
+          <li><a href="index.html" target="iframe_a">Portfolio</a></li>
+          <li><a href="index.html" target="iframe_a">Life</a></li>
+          <li><a href="index.html" target="iframe_a">Contacts</a></li>
       </ul>
     </div>
   </nav>
 
-    <div></div>
-     <p id="typed1"></p>
-     <p id="typed2"></p>
-     <p id="typed"></p>
-        <!-- Page Content goes here -->
+    <div>
+
+       <div class="video-container no-controls">
+          <iframe width="853" height="480" frameborder="0" allowfullscreen name="iframe_a"></iframe>
+        </div>
   </div>
 
       <!--Import jQuery before materialize.js-->
