--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
-          <li><a href="index.html" target="iframe_a">Bio</a></li>
+          <li><a href="bio.html" target="iframe_a">Bio</a></li>
           <li><a href="index.html" target="iframe_a">Work</a></li>
           <li><a href="index.html" target="iframe_a">Portfolio</a></li>
           <li><a href="index.html" target="iframe_a">Life</a></li>
           <li><a href="index.html" target="iframe_a">Contacts</a></li>
       </ul>
       <ul class="side-nav" id="mobile-demo">
-          <li><a href="index.html" target="iframe_a">Bio</a></li>
+          <li><a href="bio.html" target="iframe_a">Bio</a></li>
           <li><a href="index.html" target="iframe_a">Work</a></li>
           <li><a href="index.html" target="iframe_a">Portfolio</a></li>
           <li><a href="index.html" target="iframe_a">Life</a></li>
