finished working on skills page

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
           <li><a href="bio.html" target="iframe_a">Bio</a></li>
+          <li><a href="skills.html" target="iframe_a">Skills</a></li>
           <li><a href="work.html" target="iframe_a">Work</a></li>
           <li><a href="folio.html" target="iframe_a">Portfolio</a></li>
           <li><a href="fun.html" target="iframe_a">Life</a></li>
@@ -28,6 +29,7 @@
       </ul>
       <ul class="side-nav" id="mobile-demo">
         <li><a href="bio.html" target="iframe_a">Bio</a></li>
+        <li><a href="skills.html" target="iframe_a">Skills</a></li>
         <li><a href="work.html" target="iframe_a">Work</a></li>
         <li><a href="folio.html" target="iframe_a">Portfolio</a></li>
         <li><a href="fun.html" target="iframe_a">Life</a></li>
@@ -61,7 +63,7 @@
 
       <div class="col s12 m8 l8">
         <div class="video-container no-controls">
-          <iframe width="853" height="480" frameborder="0" allowfullscreen name="iframe_a"></iframe>
+          <iframe width="853" height="600" frameborder="0" allowfullscreen name="iframe_a"></iframe>
         </div>
     </div>
   </div>
