finished working on work section

--- a/work.html
+++ b/work.html
@@ -14,12 +14,72 @@
 
     <body>
        <div class="container">
+         <!-- each row is job profile -->
          <div class="row">
-            <div class="col s12 m12 l12">
-              
+            <div class="col s4 m6 l6">
+              <h5> Junior Data Scientist <h5>
+              <h6>MFarm KE</h6>
+              <h6> Feb, 2015 to Date </h6>
+
              </div>
+             <div class="col s8 m6 l6">
+               <h5> Duties</h5>
+                <p>
+                  responsible for the complete life cycle of a new/modified software
+                  products, from research and design to implementation, training and support
+                </p>
+                <p>
+                  Managing all data collection processes and analysis
+                  for managerial use as well as MFarm clients.
+                </p>
+            </div>
         </div>
+
+        <hr>
+
+        <div class="row">
+           <div class="col s4 m6 l6">
+             <h5> Data Analyst and project coordinator <h5>
+             <h6>MFarm KE</h6>
+             <h6> Aug, 2013 to Feb, 2015 </h6>
+
+            </div>
+            <div class="col s8 m6 l6">
+              <h5> Duties</h5>
+
+               <p>
+                 Managing all data collection processes and analysis
+                 for managerial use as well as MFarm clients.
+               </p>
+               <p>
+                  Working with local partners and entrepreneurs in the implementation
+                  of MFarm projects as required by donors
+               </p>
+           </div>
        </div>
+
+       <hr>
+
+       <div class="row">
+          <div class="col s4 m6 l6">
+            <h5>Intern Data Analyst <h5>
+            <h6>MFarm KE</h6>
+            <h6> March, 2012 to Aug, 2012 </h6>
+
+           </div>
+           <div class="col s8 m6 l6">
+             <h5> Duties</h5>
+
+              <p>
+                Price data collection and verification.
+              </p>
+              <p>
+                 Descriptive statistics for general understanding of the Kenyan agricultural markets
+              </p>
+          </div>
+      </div>
+
+   </div>
 
 
       <!--Import jQuery before materialize.js-->
