done with education asection

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <li><a href="bio.html" target="iframe_a">Bio</a></li>
           <li><a href="skills.html" target="iframe_a">Skills</a></li>
           <li><a href="work.html" target="iframe_a">Work</a></li>
+          <li><a href="education.html" target="iframe_a">Education</a></li>
           <li><a href="folio.html" target="iframe_a">Portfolio</a></li>
           <li><a href="fun.html" target="iframe_a">Life</a></li>
           <li><a href="contacts.html" target="iframe_a">Contacts</a></li>
@@ -31,6 +32,7 @@
         <li><a href="bio.html" target="iframe_a">Bio</a></li>
         <li><a href="skills.html" target="iframe_a">Skills</a></li>
         <li><a href="work.html" target="iframe_a">Work</a></li>
+        <li><a href="education.html" target="iframe_a">Education</a></li>
         <li><a href="folio.html" target="iframe_a">Portfolio</a></li>
         <li><a href="fun.html" target="iframe_a">Life</a></li>
         <li><a href="contacts.html" target="iframe_a">Contacts</a></li>
