--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <li><a href="work.html" target="iframe_a">Work</a></li>
           <li><a href="education.html" target="iframe_a">Education</a></li>
           <li><a href="folio.html" target="iframe_a">Portfolio</a></li>
-          <li><a href="fun.html" target="iframe_a">Life</a></li>
+          <!-- <li><a href="fun.html" target="iframe_a">Life</a></li> -->
           <li><a href="contacts.html" target="iframe_a">Contacts</a></li>
       </ul>
       <ul class="side-nav" id="mobile-demo">
@@ -34,7 +34,7 @@
         <li><a href="work.html" target="iframe_a">Work</a></li>
         <li><a href="education.html" target="iframe_a">Education</a></li>
         <li><a href="folio.html" target="iframe_a">Portfolio</a></li>
-        <li><a href="fun.html" target="iframe_a">Life</a></li>
+        <!-- <li><a href="fun.html" target="iframe_a">Life</a></li> -->
         <li><a href="contacts.html" target="iframe_a">Contacts</a></li>
       </ul>
     </div>
